# 03_error_info

./: Cargo.toml  test.dio  test.rest
error-code/: Cargo.toml
error-code-derive/: Cargo.toml
error-code-derive/src/: error_info.rs  lib.rs
error-code/examples/: web.rs
error-code/src/: lib.rs
