[package]
name = "error-code"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
error-code-derive = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
error-code = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
backtrace = "0.3.73"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
